--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,16 +13,16 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-26 Fri 15:45]
+#+CAPTION: Clock summary at [2018-10-26 Fri 16:19]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *87:08* |       |       |   0.0 |
+| *Total time*                                                                | *87:40* |       |       |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 87:08   |       |       |   0.0 |
-| Active                                                                      |         | 87:08 |       |   0.0 |
+| Stories                                                                     | 87:40   |       |       |   0.0 |
+| Active                                                                      |         | 87:40 |       |   0.0 |
 | Edit release notes for previous sprint                                      |         |       |  1:10 |   0.0 |
-| Sprint and product backlog grooming                                         |         |       |  4:21 |   0.0 |
+| Sprint and product backlog grooming                                         |         |       |  4:45 |   0.0 |
 | Create a document with release steps                                        |         |       |  0:11 |   0.0 |
 | Add support for kcov                                                        |         |       |  3:09 |   0.0 |
 | Build on tags for Windows                                                   |         |       |  0:09 |   0.0 |
@@ -53,7 +53,7 @@
 | Add support for LGTM                                                        |         |       |  0:18 |   0.0 |
 | Read up on framework and API design                                         |         |       |  6:10 |   0.0 |
 | Create a single binary for all of dogen                                     |         |       |  5:59 |   0.0 |
-| Implement the new dogen product API                                         |         |       |  2:57 |   0.0 |
+| Implement the new dogen product API                                         |         |       |  3:05 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -134,6 +134,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2018-10-26 Fri 15:55]--[2018-10-26 Fri 16:19] =>  0:24
     CLOCK: [2018-10-26 Fri 10:17]--[2018-10-26 Fri 11:46] =>  1:29
     CLOCK: [2018-10-25 Thu 15:15]--[2018-10-25 Thu 15:54] =>  0:39
     CLOCK: [2018-10-25 Thu 12:50]--[2018-10-25 Thu 13:25] =>  0:35
@@ -964,6 +965,7 @@ fits in with other binaries such as =dogen.web=, =dogen.http=,
 
 *** STARTED Implement the new dogen product API                       :story:
     :LOGBOOK:
+    CLOCK: [2018-10-26 Fri 15:46]--[2018-10-26 Fri 15:54] =>  0:08
     CLOCK: [2018-10-26 Fri 14:21]--[2018-10-26 Fri 15:45] =>  1:24
     CLOCK: [2018-10-26 Fri 14:09]--[2018-10-26 Fri 14:20] =>  0:11
     CLOCK: [2018-10-26 Fri 12:35]--[2018-10-26 Fri 13:25] =>  0:50
@@ -1009,6 +1011,115 @@ Notes:
   targets, e.g. =cli_lib= and =cli_exe=. For all other cases we can
   maintain the existing rule.
 
+*** Fix cmake emacs variable for tab width                            :story:
+
+We need to replace uses of =tab-width= in cmake files with
+=cmake-tab-width=, as explained here:
+
+[[http://stackoverflow.com/questions/25751408/controlling-the-indent-offset-for-cmake-in-emacs][Controlling the indent/offset for CMake in emacs]]
+
+We need to do this for both code generated and manually generated
+files.
+
+*** Fix =cp= error on cmake with local third-party packages           :story:
+
+We are getting strange errors in cmake:
+
+: cp: cannot stat ‘/usr/lib/i386-linux-gnu/libpthread.so.1.54.0’: No such file or directory
+
+*** Assorted improvements to CMake files                               :epic:
+
+It seems we are not using proper CMake idioms to pick up compiler
+features, as explained here:
+
+- [[http://unclejimbo.github.io/2018/06/08/Modern-CMake-for-Library-Developers/][Modern CMake for Library Developers]]
+- [[http://www.slideshare.net/DanielPfeifer1/cmake-48475415][CMake - Introduction and best practices]]
+- [[https://datascience.lanl.gov/data/151208-LANL-Hoffman-Science.pdf][Building Science with CMake]]
+- [[http://voices.canonical.com/jussi.pakkanen/2013/03/26/a-list-of-common-cmake-antipatterns/][A list of common CMake antipatterns]]
+- [[https://rix0r.nl/blog/2015/08/13/cmake-guide/][The Ultimate Guide to Modern CMake]]
+- [[https://github.com/crezefire/cxp][CXP: C++ Cross Platform]]: A template project for creating a cross
+  platform C++ CMake project using modern CMake syntax and transitive
+  dependencies.
+
+We need to implement this using proper CMake idioms.
+
+Notes:
+
+- Add version and language to project.
+- start using [[https://cmake.org/cmake/help/v3.3/command/target_compile_options.html][target compile options]] for each target. We will have to
+  repeat the same flags; this could be avoided by passing in a
+  variable. See also [[http://stackoverflow.com/questions/23995019/what-is-the-modern-method-for-setting-general-compile-flags-in-cmake][What is the modern method for setting general
+  compile flags in CMake?]]
+- define qualified aliases for all libraries, including nested
+  aliasing for =dogen::test_models=. Ensure all linking is done
+  against qualified names.
+- use target include directories for each target and only add the
+  required include directories to each target. Mark them with the
+  appropriate visibility, including using =interface=. We should then
+  remove all duplication of libraries in the specs.
+- try replacing calls to =-std=c++-14= with compiler feature
+  detection. We need to create a list of all C++-14 features we're
+  using.
+- remove all of the debug/release compilation options and start using
+  =CMAKE_BUILD_TYPE= instead. See [[http://pastebin.com/jCDW5Aa9][this]] example. We added build type
+  support to our builds, but as a result, the binaries moved from
+  =stage/bin= to =bin=. There is no obvious explanation for this.
+- remove =STATIC= on all libraries and let users specify which linkage
+  to use. We already have a story to capture this work.
+- remove the stage folder and use the traditional CMake
+  directories. This will also fix the problems we have with
+  BUILD_TYPE.
+- consider buying the CMake book: https://crascit.com/professional-cmake/.
+
+Merged stories:
+
+*Usage of external module path in cmakelists*                       :story:
+
+It seems like we are not populating the target names
+properly. Originally the target name for test model all built-ins was:
+
+: dogen_all_builtins
+
+When we moved the test models into =test_models= the target name did
+not change. It should have changed to:
+
+: dogen_test_models_all_builtins
+
+*** Support for cmake components and groups                           :story:
+
+#+begin_quote
+*Story*: As a dogen user, I need to integrate the generated models
+with my existing packaging code.
+#+end_quote
+
+We recently added support for creating multiple packages from a single
+source tree. We need generated models to have a new top-level cmake file:
+
+: add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
+: add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
+:
+: install(
+:     DIRECTORY include/
+:     DESTINATION include
+:     COMPONENT headers
+:     FILES_MATCHING PATTERN "*.hpp")
+
+And the =src= cmake file:
+
+: install(TARGETS dia ARCHIVE DESTINATION lib COMPONENT libraries)
+
+*** Mop-up nested namespaces using legacy syntax                      :story:
+
+It seems we still have a number of places in the templates where we
+are using the legacy nested namespaces. Its probably only in
+serialisation, given that's the only place where we've hard-coded the
+namespaces and they are more than one level deep (we have a lot of
+=std= but that's not affected):
+
+: namespace boost {
+: namespace serialization {
+
+We need to wrap these in if's for C++ 17 and add nested namespaces.
 
 *** Great meta-data rename                                            :story:
 
@@ -2072,3 +2183,13 @@ Then:
   they then do it for each request.
 
 Note also that a request should support multiple target models.
+*** CANCELLED Add a CMake module for git                              :story:
+    CLOSED: [2018-10-26 Fri 16:18]
+
+*Rationale*: we now set the commit from the outside world so that
+there are no dependencies with git.
+
+We are finding git manually at the moment, which means we are probably
+not doing it right. It appears there is a CMake script for it:
+
+- [[%20http://gnuradio.org/redmine/projects/gnuradio/repository/revisions/accb9f2fe8fd8f6a1e114adac5b15304b0e0012d/entry/cmake/Modules/FindGit.cmake][FindGIT.cmake]]
